Adattamento recupero regole, vanno recuperate solo quelle della coppa